2012-06-13  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* transport-coefficients/generic-functions.lisp (mu2 mu2-1): Updated
	documentation for the interface and generic function.

	* transport-coefficients/mcc-viscosity.lisp (mu2-1): Redefined
	returned values for the McCormack model.  Instead of returning mu1
	& mu2, I return the total viscosity.  Individual viscosities are
	avaiable via multiple values

2012-05-27  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* transport-coefficients/cck-transport-coefficients.lisp
	(alpha-T-1): Changed interface for cck to accomodate McCormack
	formula that requires both p1 and p2

	* transport-coefficients/generic-functions.lisp (D12b): Added
	function for binary diffusion for a gas mix, explicitly dependent
	on the potentials of each species, and their densities.  This
	function is necessary for higher order binary diffusion
	coefficients

2012-05-18  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* transport-coefficients/generic-functions.lisp (lambda-ig1)
	(lambda-ig2, lambda1): Refactoring of thermal conductivity.  I now
	have separated lambda for ideal gas from that of non-ideal gas,
	since the latter requires thermal conductivity

2011-08-23  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* src/hs-collision-integrals.lisp (omega-hs-coeff, omegaLS-hs*):
	Renamed omega-hs-coeff into omegaLS-hs*

2011-08-18  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* src/tc-external-interface.lisp: Added unit tests for O2 Cv and
	Cp.  Pass.

	* src/kt-transport-coeffs.lisp (lambda-0-lj): Added uni test for
	O2 thermal conductivity.  It fails by a factor of 1.27

2011-08-17  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* src/lemmon-jacobsen-2004-coeffs.lisp
	(LJ04-dilute-thermal-conductivity): Returns multiple values of all
	terms in approximation.  Updated doc

	* src/tc-external-interface.lisp (Cv, Cv&Cp): Renamed test Cv into
	Cv&Cp.  Added documentation.  Verified correctness of CRC values.
